Modified nav Added new hero banner Added 3 banners and footer content

--- a/app/index.html
+++ b/app/index.html
@@ -29,46 +29,134 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <div class="container">
-        <div class="header">
-            <ul class="nav nav-pills pull-right">
-                <li class="active">
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">About</a>
-                </li>
-                <li>
-                    <a href="#">Contact</a>
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">PACE</a>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Products <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                    <li><a href="#"><h4>Food Preparation</h4></a></li>
+                    <li><a href="#">Blenders</a></li>
+                    <li><a href="#">Food Processor</a></li>
+                    <li><a href="#">Juicer</a></li>
+                    <li role="separator" class="divider"></li>
+                    <li><a href="#"><h4>Cooking</h4></a></li>
+                    <li><a href="#">Fryers</a></li>
+                    <li><a href="#">Induction</a></li>
+                    <li><a href="#">Grillers</a></li>
+                    <li><a href="#">Fast Cooking</a></li>
+                    <li><a href="#">Ovens</a></li>
+                    <li role="separator" class="divider"></li>
+                </ul>
                 </li>
             </ul>
-            <h3 class="text-muted">html bootstrap</h3>
+            <form class="navbar-form navbar-left" role="search">
+                <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-btn">
+                    <button class="btn btn-default" type="button">Go!</button>
+                </span>
+                </div><!-- /input-group -->
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#">Register Purchase</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+            </div><!-- /.navbar-collapse -->
+
+        </div>
+    </nav>
+
+    <div class="container-fluid">
+
+        <div class="jumbotron img-background inverse" style="background-image:url('images/ovens-external-large.jpg');">
+            <div class="centered-container">
+                <div class="caption">
+                    <h2>Register Your Purchase To Get Support</h2>
+                    <p>Get FREE SUPPORT for your purchase when you register for warranty</p>
+                    <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a></p>
+                </div>
+            </div>
         </div>
 
-        <div class="jumbotron">
-            <h1>'Allo, 'Allo!</h1>
-            <p class="lead">Always a pleasure scaffolding your apps.</p>
-            <p><a class="btn btn-lg btn-success" href="#">Splendid!</a></p>
-        </div>
-
-        <div class="row marketing">
-            <div class="col-lg-6">
-                <h4>HTML5 Boilerplate</h4>
-                <p>HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.</p>
-
-                <h4>Sass</h4>
-                <p>Sass is the most mature, stable, and powerful professional grade CSS extension language in the world.</p>
-
-                <h4>Bootstrap</h4>
-                <p>Sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.</p>
-
-                <h4>Modernizr</h4>
-                <p>Modernizr is an open-source JavaScript library that helps you build the next generation of HTML5 and CSS3-powered websites.</p>
+        <div class="row">
+            <div class="col-md-4">
+                <div class="box-with-image inverse">
+                    <a href="#">
+                        <img src="images/oven-baking.jpg" class="img-responsive" />
+                        <div class="caption">
+                            <h2 class="text-center">Get Support</h2>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="box-with-image">
+                    <a href="#">
+                        <img src="images/red-phone.jpg" class="img-responsive" />
+                        <div class="caption">
+                            <h2 class="text-center">FAQ</h2>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-4">
+                <div class="box-with-image inverse">
+                    <a href="#">
+                        <img src="images/cooking-induction-stove.png" class="img-responsive" />
+                        <div class="caption">
+                            <h2 class="text-center">Extend Your Warranty</h2>
+                        </div>
+                    </a>
+                </div>
             </div>
         </div>
 
         <div class="footer">
-            <p>♥ from the Yeoman team</p>
+            <div class="container-fluid">
+                <div class="row">  
+                    <div class="col-md-4 text-left">
+                        <div class="col-box">
+                            <a href="#">About Us</a>
+                            <br/>
+                            <a href="#">Contact Us</a>
+                            <br/>
+                            <a href"#">Site Map</a>
+                            <br/>
+                            <a href="#">Terms &amp; Conditions</a>
+                        </div>
+                    </div>
+                    <div class="col-md-4 text-left">
+                        <div class="col-box">
+                            <address>
+                                <strong>PACE Pte Ltd</strong><br>
+                                100 Victoria Street, #13-01/02<br/>
+                                National Library Building, National Library, 188064<br>
+                                <abbr title="Phone">Tel:</abbr> +65 65804555
+                            </address>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="col-box">
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d1994.3974657258645!2d103.854434!3d1.297749!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xf23dddaa8432afc5!2sNational+Library%2C+Singapore!5e0!3m2!1sen!2sus!4v1456760692083" width="100%" height="255" frameborder="0" style="border:0" allowfullscreen=""></iframe>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
